fixed slight shifting of game board when transitioning from stats to end of game message

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #message {
-	height: 25px;
+	height: 27px;
 }
 
 
